--- a/starter/index.html
+++ b/starter/index.html
@@ -4,126 +4,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./assets/css/css.css" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/css.css">
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>FutChampions</title>
+
+  <style>
+    /* Styling the parent grid container */
+    .parent-player {
+      background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="892" height="725" viewBox="0 0 904 650" fill="none"%3E%3Cpath d="M903 649.439H1L120.311 1H783.788L903 649.439Z" fill="%23404040" stroke="%23696969" stroke-miterlimit="10"/%3E%3Cpath d="M69.8843 275.038H834.169" stroke="%23696969" stroke-miterlimit="10"/%3E%3Cpath d="M550.992 275.425C553.194 321.703 508.921 360.763 452.019 360.763C395.117 360.763 350.853 321.703 353.062 275.425C355.172 231.123 399.452 196.564 452.035 196.564C504.618 196.564 548.89 231.115 550.992 275.425Z" stroke="%23696969" stroke-miterlimit="10"/%3E%3Cpath d="M541.288 71.4008C543.078 109.009 503.086 140.632 451.897 140.632C400.708 140.632 360.732 109.017 362.53 71.4008C364.259 35.2446 404.251 6.93591 451.92 6.93591C499.582 6.93591 539.574 35.2446 541.288 71.4008Z" stroke="%23696969" stroke-miterlimit="10"/%3E%3Cpath d="M269.125 96.4996H640.093L630.663 1.1532H278.312L269.125 96.4996Z" fill="%23404040" stroke="%23696969" stroke-miterlimit="10"/%3E%3Cpath d="M371.922 54.7625H532.542L530.219 1.13715H374.245L371.922 54.7625Z" stroke="%23696969" stroke-miterlimit="10"/%3E%3Cpath d="M343.464 530.333C346.061 474.554 395.78 431.261 454.624 431.261C513.469 431.261 563.279 474.554 565.998 530.333C568.855 588.91 519.151 638.6 454.853 638.6C390.554 638.6 340.737 588.91 343.471 530.333H343.464Z" stroke="%23696969" stroke-miterlimit="10"/%3E%3Cpath d="M675.597 492.572H227.26L211.911 649.198H690.84L675.597 492.572Z" fill="%23404040" stroke="%23696969" stroke-miterlimit="10"/%3E%3Cpath d="M556.362 556.642H352.353L348.43 649.238H560.453L556.362 556.642Z" stroke="%23696969" stroke-miterlimit="10"/%3E%3C/svg%3E');
+      background-repeat: no-repeat;
+      background-size: 100% ;
+      height: 100vh;
+      width: 100%;
+      background-position: center;
+      background-size: cover;
+      object-fit: cover;
+    }
+  </style>
 </head>
 
 <body>
   <section style="padding: 50px" class="d-flex">
-    <!-- affichage de l'equipe -->
-    <div style="
-          background-image: url('./assets/img/stadium_background.webp');
-          background-repeat: no-repeat;
-          height: 100vh;
-          width: 100%;
-          
-        " class="text-white rounded">
-      <!-- Defense -->
-      <div style="width: 50%; margin: auto" id="parent-defance"
-        class="d-flex justify-content-center align-items-center">
-        <div class="position-relative">
-          <div class="player">LB</div>
-        </div>
-        <div class="position-relative">
-          <div class="player">CB</div>
-        </div>
-        <div class="position-relative">
-          <div class="player">CB</div>
-        </div>
-        <div class="position-relative">
-          <div class="player">RB</div>
-        </div>
-      </div>
-      <!-- Attack -->
-      <div style="width: 50%; margin: auto" id="parent-attack" class="d-flex justify-content-center align-items-center">
-        <div class="position-relative">
-          <div class="player">LWF</div>
-        </div>
-        <div class="position-relative">
-          <div class="player mb-5">ST</div>
-        </div>
-        <div class="position-relative">
-          <div class="player">RWF</div>
-        </div>
-      </div>
 
-      <!-- Milieu -->
-      <div style="width: 50%; margin: auto" id="parent-milieu" class="d-flex justify-content-center align-items-center">
-        <div class="position-relative">
-          <div class="player">CMF</div>
-        </div>
-        <div class="position-relative">
-          <div class="player">DMF</div>
-        </div>
-        <div class="position-relative">
-          <div class="player">CMF</div>
-        </div>
+    <div class="parent-player grid grid-cols-12 grid-rows-12 gap-4 w-full ">
+      <!-- Goalkeeper (GK) -->
+      <div class="row-start-11 col-start-6 col-span-2 row-span-2 bg-green-500 p-4 text-center text-white rounded-lg">
+          GK
+      </div> 
+  
+      <!-- Defenders (4 players) -->
+      <div class="row-start-8 col-start-2 col-span-2 row-span-2 bg-blue-500 p-4 text-center text-white rounded-lg">
+          LB
       </div>
-
-      <!-- Defense -->
-      <div style="width: 50%; margin: auto" id="parent-defance"
-        class="d-flex justify-content-center align-items-center">
-        <div class="position-relative">
-          <div class="player">LB</div>
-        </div>
-        <div class="position-relative">
-          <div class="player">CB</div>
-        </div>
-        <div class="position-relative">
-          <div class="player">CB</div>
-        </div>
-        <div class="position-relative">
-          <div class="player">RB</div>
-        </div>
+      <div class="row-start-9 col-start-5 col-span-2 row-span-2 bg-blue-500 p-4 text-center text-white rounded-lg">
+          CB
       </div>
-
-      <!-- Goalkeeper -->
-<!-- Goalkeeper -->
-<div id="parent-gk" class="d-flex justify-content-center align-items-center position-absolute" style="bottom: 5%; width: 50%; margin: auto;">
-  <div class="player d-flex flex-column align-items-center">
-    <p class="fw-bold mb-1">90</p> 
-    <p class="fw-bold mb-1">Cf</p> 
-    <div class="player-img mb-2">
-      <img src="./assets/img/messi.jpeg" alt="Messi" class="rounded-circle img-fluid">
-    </div>
-    <p class="mb-3">Name</p>
-    <div style="font-size: 10px;" class="d-flex flex-wrap gap-2 justify-content-center">
-      <div class="text-center">
-        <p class="mb-0">Pac</p>
-        <p class="mb-0">90</p>
+      <div class="row-start-9 col-start-7 col-span-2 row-span-2 bg-blue-500 p-4 text-center text-white rounded-lg">
+          CB
       </div>
-      <div class="text-center">
-        <p class="mb-0">Sho</p>
-        <p class="mb-0">90</p>
+      <div class="row-start-8 col-start-10 col-span-2 row-span-2 bg-blue-500 p-4 text-center text-white rounded-lg">
+          RB
       </div>
-      <div class="text-center">
-        <p class="mb-0">Pas</p>
-        <p class="mb-0">90</p>
+  
+      <!-- Midfielders (3 players) -->
+      <div class="row-start-6 col-start-4 col-span-2 row-span-2 bg-yellow-500 p-4 text-center text-white rounded-lg">
+          CMF
       </div>
-      <div class="text-center">
-        <p class="mb-0">Dri</p>
-        <p class="mb-0">90</p>
+      <div class="row-start-7 col-start-6 col-span-2 row-span-2 bg-yellow-500 p-4 text-center text-white rounded-lg">
+          DMF
       </div>
-      <div class="text-center">
-        <p class="mb-0">Def</p>
-        <p class="mb-0">90</p>
+      <div class="row-start-6 col-start-8 col-span-2 row-span-2 bg-yellow-500 p-4 text-center text-white rounded-lg">
+          CMF
       </div>
-      <div class="text-center">
-        <p class="mb-0">Phy</p>
-        <p class="mb-0">90</p>
+  
+      <!-- Forwards (3 players) -->
+      <div class="row-start-3 col-start-3 col-span-2 row-span-2 bg-red-500 p-4 text-center text-white rounded-lg">
+          LWF
       </div>
-    </div>
-    <div class="d-flex justify-content-center gap-1 mb-5">
-      <img src="./assets/img/bandeira-argentina-flag-0.png" alt="Flag" class="img-fluid" style="width: 15px;">
-      <img src="./assets/img/bandeira-argentina-flag-0.png" alt="Flag" class="img-fluid" style="width: 15px;">
-      <img src="./assets/img/bandeira-argentina-flag-0.png" alt="Flag" class="img-fluid" style="width: 15px;">
-    </div>
+      <div class="row-start-2 col-start-6 col-span-2 row-span-2 bg-red-500 p-4 text-center text-white rounded-lg">
+          ST
+      </div>
+      <div class="row-start-3 col-start-9 col-span-2 row-span-2 bg-red-500 p-4 text-center text-white rounded-lg">
+          RWF
+      </div>
   </div>
-</div>
 
-    </div>
+
+
+    <!-- changement -->
+
+    <!-- end changement -->
 
     <!-- formulaire -->
     <div class="container w-50 h-100 bg-dark text-light py-3">
