recuperation des données

--- a/starter/index.html
+++ b/starter/index.html
@@ -35,39 +35,39 @@
         class="row-start-11 col-start-6 col-span-2 row-span-4  p-4 text-center text-white rounded-lg relative">
 
         <!-- Score -->
-        <p class="font-bold text-lg absolute top-9 left-3  px-2 py-1">90</p>
-        <p style="font-size: small; color: black;" class="absolute top-14 left-4 px-2 py-1"><b>CF</b></p>
+        <p class="font-bold text-lg absolute top-9 left-4  px-2 py-1">90</p>
+        <p style="font-size: small; color: black;" class="absolute top-14 left-4 px-2 py-1"><b>GK</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
-          <img src="https://cdn.sofifa.net/players/158/023/25_120.png" alt="Messi" class="rounded-full w-16 h-16">
+          <img src="https://cdn.sofifa.net/players/200/389/25_120.png" alt="Messi" class="rounded-full w-16 h-16">
           <p class="font-semibold mt-2">Messi</p>
         </div>
 
         <!-- Player Stats -->
         <div style="gap: 1.5px;" class="flex justify-between text-xs mt-2">
           <div class="text-center">
-            <p class="mb-0 text-black"><b>Pac</b></p>
+            <p class="mb-0 text-black"><b>Div</b></p>
             <p class="mb-0">90</p>
           </div>
           <div class="text-center">
-            <p class=" mb-0 text-black"><b>Sho</b></p>
+            <p class=" mb-0 text-black"><b>Han</b></p>
             <p class="mb-0">90</p>
           </div>
           <div class="text-center">
-            <p class=" mb-0 text-black"><b>Ps</b></p>
+            <p class=" mb-0 text-black"><b>kic</b></p>
             <p class="mb-0">90</p>
           </div>
           <div class="text-center">
-            <p class=" mb-0 text-black"><b>Dri</b></p>
+            <p class=" mb-0 text-black"><b>Ref</b></p>
             <p class="mb-0">90</p>
           </div>
           <div class="text-center">
-            <p class=" mb-0 text-black"><b>Def</b></p>
+            <p class=" mb-0 text-black"><b>Sp</b></p>
             <p class="mb-0">90</p>
           </div>
           <div class="text-center">
-            <p class=" mb-0 text-black"><b>Phy</b></p>
+            <p class=" mb-0 text-black"><b>Pos</b></p>
             <p class="mb-0">90</p>
           </div>
         </div>
@@ -88,7 +88,7 @@
                   " class="row-start-8 col-start-2 col-span-2 row-span-4 p-4 text-center text-white rounded-lg">
         <!-- Score -->
         <p class="font-bold text-lg absolute   px-2 py-1 mt-5">90</p>
-        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 ml-1"><b>CF</b></p>
+        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10"><b>CF</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
@@ -140,7 +140,7 @@
       " class="row-start-9 col-start-4 col-span-2 row-span-4 p-4 text-center text-white rounded-lg">
         <!-- Score -->
         <p class="font-bold text-lg absolute   px-2 py-1 mt-5">90</p>
-        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 ml-1"><b>CF</b></p>
+        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10"><b>RWF</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
@@ -190,7 +190,7 @@
       " class="row-start-9 col-start-8 col-span-2 row-span-4 p-4 text-center text-white rounded-lg">
         <!-- Score -->
         <p class="font-bold text-lg absolute   px-2 py-1 mt-5">90</p>
-        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 ml-1"><b>CF</b></p>
+        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 "><b>CF</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
@@ -240,7 +240,7 @@
       " class="row-start-8 col-start-10 col-span-2 row-span-4 p-4 text-center text-white rounded-lg">
         <!-- Score -->
         <p class="font-bold text-lg absolute   px-2 py-1 mt-5">90</p>
-        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 ml-1"><b>CF</b></p>
+        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 "><b>CF</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
@@ -292,7 +292,7 @@
       " class="row-start-5 col-start-4 col-span-2 row-span-4 p-4 text-center text-white rounded-lg">
         <!-- Score -->
         <p class="font-bold text-lg absolute   px-2 py-1 mt-5">90</p>
-        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 ml-1"><b>CF</b></p>
+        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 "><b>CMF</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
@@ -342,7 +342,7 @@
       " class="row-start-7 col-start-6 col-span-2 row-span-4 p-4 text-center text-white rounded-lg">
         <!-- Score -->
         <p class="font-bold text-lg absolute   px-2 py-1 mt-5">90</p>
-        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 ml-1"><b>CF</b></p>
+        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 "><b>CF</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
@@ -392,7 +392,7 @@
       " class="row-start-5 col-start-8 col-span-2 row-span-4 p-4 text-center text-white rounded-lg">
         <!-- Score -->
         <p class="font-bold text-lg absolute   px-2 py-1 mt-5">90</p>
-        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 ml-1"><b>CF</b></p>
+        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 "><b>CF</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
@@ -444,7 +444,7 @@
       " class="row-start-2 col-start-3 col-span-2 row-span-4 p-4 text-center text-white rounded-lg">
         <!-- Score -->
         <p class="font-bold text-lg absolute   px-2 py-1 mt-5">90</p>
-        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 ml-1"><b>CF</b></p>
+        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 "><b>CF</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
@@ -494,7 +494,7 @@
       " class="row-start-1 col-start-6 col-span-2 row-span-4 p-4 text-center text-white rounded-lg">
         <!-- Score -->
         <p class="font-bold text-lg absolute   px-2 py-1 mt-5">90</p>
-        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 ml-1"><b>CF</b></p>
+        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 "><b>CF</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
@@ -544,7 +544,7 @@
       " class="row-start-2 col-start-9 col-span-2 row-span-4 p-4 text-center text-white rounded-lg">
         <!-- Score -->
         <p class="font-bold text-lg absolute   px-2 py-1 mt-5">90</p>
-        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 ml-1"><b>CF</b></p>
+        <p style="font-size: small; color: black;" class="absolute  px-2 py-1 mt-10 "><b>CF</b></p>
 
         <!-- Player Image and Name -->
         <div class="flex flex-col items-center mt-4">
@@ -611,7 +611,7 @@
 
         <div class="mb-4">
           <label for="level" class="form-label block text-sm font-semibold text-gray-200">Position</label>
-          <select id="level"
+          <select id="position"
             class="form-select mt-2 p-2 w-full border rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:text-white">
             <option value="Please select" class="text-gray-400">Please select</option>
             <option value="GK">GK</option>
@@ -654,14 +654,16 @@
             id="logo" />
         </div>
 
-        <div class="mb-6">
-          <h5 class="text-lg font-semibold text-blue-400 mb-2">Player Ratings</h5>
-          <div class="grid grid-cols-2 gap-4">
+
+        <!-- GK rating -->
+        <div class="mb-6 hidden">
+          <h5 class="text-lg font-semibold text-blue-400 mb-2">GK Ratings</h5>
+          <div class="grid grid-cols-2 gap-4 ">
             <div>
               <label for="rating" class="form-label block text-sm font-semibold text-gray-200">Overall Rating</label>
               <input type="number"
                 class="form-control mt-2 p-2 w-full border rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                id="rating" />
+                id="ratingGk" />
             </div>
             <div>
               <label for="diving" class="form-label block text-sm font-semibold text-gray-200">Diving</label>
@@ -702,16 +704,62 @@
           </div>
         </div>
 
-        <div class="flex justify-between mt-4">
-          <button id="submit" type="submit"
-            class="btn bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700 focus:ring-2 focus:ring-blue-500 dark:bg-blue-600 dark:hover:bg-blue-500">
-            Submit
-          </button>
-          <button type="button"
-            class="btn bg-gray-500 text-white px-4 py-2 rounded-lg hover:bg-gray-700 focus:ring-2 focus:ring-gray-500 dark:bg-gray-600 dark:hover:bg-gray-500"
-            id="cancel">
-            Cancel
-          </button>
+          <!-- player rating -->
+         <div class="mb-6">
+            <h5 class="text-lg font-semibold text-blue-400 mb-2">Player Ratings</h5>
+            <div class="grid grid-cols-2 gap-4">
+              <div>
+                <label for="rating" class="form-label block text-sm font-semibold text-gray-200">Overall Rating</label>
+                <input type="number"
+                  class="form-control mt-2 p-2 w-full border rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                  id="ratingPlayer" />
+              </div>
+              <div>
+                <label for="diving" class="form-label block text-sm font-semibold text-gray-200">Pace</label>
+                <input type="number"
+                  class="form-control mt-2 p-2 w-full border rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                  id="pace" />
+              </div>
+              <div>
+                <label for="handling" class="form-label block text-sm font-semibold text-gray-200">Shooting</label>
+                <input type="number"
+                  class="form-control mt-2 p-2 w-full border rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                  id="shooting" />
+              </div>
+              <div>
+                <label for="kicking" class="form-label block text-sm font-semibold text-gray-200">Passing</label>
+                <input type="number"
+                  class="form-control mt-2 p-2 w-full border rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                  id="passing" />
+              </div>
+              <div>
+                <label for="reflexes" class="form-label block text-sm font-semibold text-gray-200">Dribbling</label>
+                <input type="number"
+                  class="form-control mt-2 p-2 w-full border rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                  id="dribbling" />
+              </div>
+              <div>
+                <label for="speed" class="form-label block text-sm font-semibold text-gray-200">Defending</label>
+                <input type="number"
+                  class="form-control mt-2 p-2 w-full border rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                  id="defending" />
+              </div>
+              <div>
+                <label for="positioning" class="form-label block text-sm font-semibold text-gray-200">Physical</label>
+                <input type="number"
+                  class="form-control mt-2 p-2 w-full border rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                  id="physical" />
+              </div>
+            </div>
+          </div>
+          <div class="mb-6 ">
+            <div class="flex justify-between mt-4">
+              <button onclick="Add(event)" id="submit" type="submit"
+                class="btn bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700 focus:ring-2 focus:ring-blue-500 dark:bg-blue-600 dark:hover:bg-blue-500">
+                Submit
+              </button>
+            </div>
+          </div>
         </div>
       </form>
     </div>
@@ -719,7 +767,7 @@
     <!-- end form -->
   </section>
   <!-- changement -->
-  <div class="flex flex-wrap gap-4 p-4 bg-gray-800 text-white rounded-lg mt-8">
+  <div id="changement" class="flex flex-wrap gap-4 p-4 bg-gray-800 text-white rounded-lg mt-8">
     <div style="background-image: url('./assets/img/badge_gold.webp');
                   background-size: cover;
                   width: 150px;
