hidden submit when i update the oposite

--- a/starter/index.html
+++ b/starter/index.html
@@ -302,7 +302,10 @@
               class="mr-1 btn bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700 focus:ring-2 focus:ring-blue-500 dark:bg-blue-600 dark:hover:bg-blue-500">
               Submit
             </button>
-            <button id="update" type="button" class="btn bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-700 focus:ring-2 focus:ring-blue-500 dark:bg-blue-600 dark:hover:bg-blue-500">
+            <button id="cancel" type="button" class="mr-1 hidden btn bg-gray-500 text-white px-4 py-2 rounded-lg hover:bg-gray-700 focus:ring-2 focus:ring-gray-500 dark:bg-gray-600 dark:hover:bg-gray-500">
+              cancel
+            </button>
+            <button id="update" type="button" class="btn hidden bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-700 focus:ring-2 focus:ring-yellow-500 dark:bg-yellow-600 dark:hover:bg-yellow-500">
               modifier
             </button>
           </div>
