--- a/starter/index.html
+++ b/starter/index.html
@@ -25,6 +25,9 @@
     }
   </style>
 </head>
+<button onclick="Delete('${player.name}')" class="text-red-500 text-sm w-1">
+  <i class="fas fa-trash-alt"></i> 
+</button>
 
 <body onload="ReadAll()">
   <section style="padding: 50px" class="displayFlex display">
@@ -323,8 +326,7 @@
     width: 150px;
     height: 200px;"
       class="row-start-11 col-start-6 col-span-2 row-span-4  p-4 text-center text-white rounded-lg relative">
-
-
+  
 
     </div>
 
